--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
+    <button id="resizeBtn">Change grid size</button>
+    <div id="squares-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
