Fix clear button logic

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body>
     <button id="resizeBtn">Change grid size</button>
     <div id="squares-container"></div>
+    <button id="clearBtn">Clear</button>
     <script src="script.js"></script>
   </body>
 </html>
