Add dev name to the page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button id="resizeBtn">Change grid size</button>
     <div id="squares-container"></div>
     <button id="clearBtn">Clear</button>
+    <div class="dev-credits">Made by saibat01</div>
     <script src="script.js"></script>
   </body>
 </html>
